--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@
                             <input type="text" placeholder="Full Name" class="w-full px-4 py-3 mb-4 rounded-lg border-2 border-gray-300 focus:outline-none focus:border-indigo-500">
                             <input type="email" placeholder="Email Address" class="w-full px-4 py-3 mb-4 rounded-lg border-2 border-gray-300 focus:outline-none focus:border-indigo-500">
                             <textarea rows="3" placeholder="Message" class="w-full px-4 py-3 mb-4 rounded-lg border-2 border-gray-300 focus:outline-none focus:border-indigo-500"></textarea>
-                            <button type="submit" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 rounded-lg shadow-md transition duration-300">Book Now</button>
+                            <button type="submit" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 rounded-lg shadow-md transition duration-300 mb-4">Book Now</button>
                         </form>
+                        <a href="https://wa.me/2348073298542?text=I'd%20like%20to%20book%20a%20real%20estate%20consulting%20appointment." class="w-full inline-block text-center bg-green-500 hover:bg-green-600 text-white font-bold py-3 rounded-lg shadow-md transition duration-300">Chat on WhatsApp</a>
                     </div>
                     <!-- Case Studies -->
                     <div class="bg-white p-8 rounded-xl shadow-lg">
@@ -158,8 +159,9 @@
                             <textarea rows="3" placeholder="Property Description" class="w-full px-4 py-3 mb-4 rounded-lg border-2 border-gray-300 focus:outline-none focus:border-indigo-500"></textarea>
                             <label for="photos" class="block text-gray-700 font-semibold mb-2 text-left">Photos & Documents</label>
                             <input type="file" id="photos" name="photos" multiple class="w-full mb-4">
-                            <button type="submit" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 rounded-lg shadow-md transition duration-300">Submit Property</button>
+                            <button type="submit" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 rounded-lg shadow-md transition duration-300 mb-4">Submit Property</button>
                         </form>
+                        <a href="https://wa.me/2348073298542?text=I'd%20like%20to%20get%20started%20with%20selling%20my%20property." class="w-full inline-block text-center bg-green-500 hover:bg-green-600 text-white font-bold py-3 rounded-lg shadow-md transition duration-300">Chat on WhatsApp</a>
                     </div>
                     <!-- Instant Valuation Form -->
                     <div class="bg-white p-8 rounded-xl shadow-lg">
@@ -196,7 +198,7 @@
                             <h3 class="font-bold text-xl mb-2 text-gray-900">Modern Villa in Beverly Hills</h3>
                             <p class="text-gray-600 text-sm mb-4">123 Luxury Lane, Beverly Hills, CA</p>
                             <div class="flex items-center justify-between text-lg font-semibold text-gray-800">
-                                <span>$2,500,000</span>
+                                <span>₦2,500,000</span>
                             </div>
                             <p class="text-sm text-gray-500 mt-2">Mortgage/Financing available.</p>
                             <div class="mt-4 flex space-x-2">
@@ -212,7 +214,7 @@
                             <h3 class="font-bold text-xl mb-2 text-gray-900">Prime Land for Development</h3>
                             <p class="text-gray-600 text-sm mb-4">Near Tech Hub, Silicon Valley, CA</p>
                             <div class="flex items-center justify-between text-lg font-semibold text-gray-800">
-                                <span>$950,000</span>
+                                <span>₦950,000</span>
                             </div>
                             <div class="mt-4 flex space-x-2">
                                 <a href="#" class="bg-indigo-500 hover:bg-indigo-600 text-white text-sm font-semibold py-2 px-4 rounded-lg transition duration-300">View Details</a>
@@ -227,7 +229,7 @@
                             <h3 class="font-bold text-xl mb-2 text-gray-900">The Modern Residences (Off-Plan)</h3>
                             <p class="text-gray-600 text-sm mb-4">567 Skyline Drive, Houston, TX</p>
                             <div class="flex items-center justify-between text-lg font-semibold text-gray-800">
-                                <span>Starting from $600,000</span>
+                                <span>Starting from ₦600,000</span>
                             </div>
                             <p class="text-sm text-gray-500 mt-2">Estimated Completion: Q4 2025</p>
                             <div class="mt-4 flex space-x-2">
@@ -260,7 +262,7 @@
                             <h3 class="font-bold text-xl mb-2 text-gray-900">Luxury Shortlet in Downtown</h3>
                             <p class="text-gray-600 text-sm mb-4">Fully furnished, all bills included.</p>
                             <div class="flex items-center justify-between text-lg font-semibold text-gray-800">
-                                <span>$150 / Night</span>
+                                <span>₦150 / Night</span>
                             </div>
                             <div class="mt-4 flex space-x-2">
                                 <button class="bg-indigo-500 hover:bg-indigo-600 text-white text-sm font-semibold py-2 px-4 rounded-lg transition duration-300">Book Now</button>
@@ -276,7 +278,7 @@
                             <h3 class="font-bold text-xl mb-2 text-gray-900">Spacious Rental House</h3>
                             <p class="text-gray-600 text-sm mb-4">Quiet neighborhood, 4 beds, 2 baths.</p>
                             <div class="flex items-center justify-between text-lg font-semibold text-gray-800">
-                                <span>$2,000 / Month</span>
+                                <span>₦2,000 / Month</span>
                             </div>
                             <div class="mt-4 flex space-x-2">
                                 <button class="bg-indigo-500 hover:bg-indigo-600 text-white text-sm font-semibold py-2 px-4 rounded-lg transition duration-300">Schedule Viewing</button>
@@ -302,6 +304,13 @@
                         </div>
                     </div>
                 </div>
+                <!-- Contact Call-to-Action -->
+                <div class="mt-12 text-center">
+                    <p class="text-lg text-gray-700 font-semibold mb-4">Have questions about a listing? Chat with us directly.</p>
+                    <a href="https://wa.me/2348073298542?text=I'd%20like%20to%20inquire%20about%20a%20rental%20or%20lease%20property." class="inline-block bg-green-500 hover:bg-green-600 text-white font-bold py-3 px-8 rounded-lg shadow-md transition duration-300">
+                        Chat on WhatsApp
+                    </a>
+                </div>
             </div>
         </section>
 
@@ -315,8 +324,8 @@
                     <div class="bg-gray-100 p-8 rounded-xl shadow-lg">
                         <h3 class="text-2xl font-semibold text-gray-900 mb-4">ROI Calculator</h3>
                         <form>
-                            <input type="number" placeholder="Property Price ($)" class="w-full px-4 py-3 mb-4 rounded-lg border-2 border-gray-300 focus:outline-none focus:border-indigo-500">
-                            <input type="number" placeholder="Expected Monthly Rent ($)" class="w-full px-4 py-3 mb-4 rounded-lg border-2 border-gray-300 focus:outline-none focus:border-indigo-500">
+                            <input type="number" placeholder="Property Price (₦)" class="w-full px-4 py-3 mb-4 rounded-lg border-2 border-gray-300 focus:outline-none focus:border-indigo-500">
+                            <input type="number" placeholder="Expected Monthly Rent (₦)" class="w-full px-4 py-3 mb-4 rounded-lg border-2 border-gray-300 focus:outline-none focus:border-indigo-500">
                             <button type="submit" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 rounded-lg shadow-md transition duration-300">Calculate ROI</button>
                         </form>
                     </div>
@@ -364,8 +373,11 @@
                     <form class="bg-white p-8 rounded-xl shadow-lg">
                         <input type="text" placeholder="Project Type (e.g., New build, Renovation)" class="w-full px-4 py-3 mb-4 rounded-lg border-2 border-gray-300 focus:outline-none focus:border-indigo-500">
                         <textarea rows="3" placeholder="Project Details" class="w-full px-4 py-3 mb-4 rounded-lg border-2 border-gray-300 focus:outline-none focus:border-indigo-500"></textarea>
-                        <button type="submit" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 rounded-lg shadow-md transition duration-300">Submit Inquiry</button>
+                        <button type="submit" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 rounded-lg shadow-md transition duration-300 mb-4">Submit Inquiry</button>
                     </form>
+                    <a href="https://wa.me/2348073298542?text=I'd%20like%20to%20get%20a%20quote%20for%20a%20building%20or%20renovation%20project." class="inline-block mt-4 bg-green-500 hover:bg-green-600 text-white font-bold py-3 px-8 rounded-lg shadow-md transition duration-300">
+                        Chat on WhatsApp
+                    </a>
                 </div>
             </div>
         </section>
@@ -381,7 +393,7 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8 text-center">
-            <p>&copy; 2025 D Royal Real Estate. All rights reserved.</p>
+            <p>&copy; 2023 D Royal Real Estate. All rights reserved.</p>
         </div>
     </footer>
 
